--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     .sub{color:#93c5fd;font-size:13px;opacity:.85;margin-top:4px}
     .panel{background:#0f172a;border:1px solid #1e293b;border-radius:14px;padding:14px;margin:12px 0;box-shadow:0 6px 18px var(--shadow)}
     .row{display:grid;gap:12px}
+    @media(min-width:900px){.row.cols-2{grid-template-columns:1fr 1fr}}
     .searchbar{position:relative}
     .searchbar input{width:100%;padding:13px 14px;border-radius:12px;border:1px solid #1e293b;background:#0b1327;color:#e5e7eb}
     .searchbar button{position:absolute;right:6px;top:6px;height:34px;padding:0 12px;border-radius:9px;border:1px solid #1e293b;background:#0b1b33;color:#dbeafe;cursor:pointer}
@@ -45,7 +46,7 @@
 <body>
 <div class="wrap">
   <h1>사토시의지갑</h1>
-  <div class="sub">⚡ 업비트·빗썸 1초 갱신 · 통합 TOP10 · 멀티타임프레임 타점 · 데이터는 브라우저에 저장</div>
+  <div class="sub">⚡ 업비트·빗썸 1초 갱신 · 업비트 TOP10 + 빗썸 TOP10 분리 · 멀티타임프레임 타점 · 데이터는 브라우저 저장</div>
 
   <!-- 상태/컨트롤 -->
   <div class="panel">
@@ -90,12 +91,23 @@
     </div>
   </div>
 
-  <!-- 통합 TOP (업비트·빗썸) -->
+  <!-- 상승 TOP: 업비트10 + 빗썸10 (좌우 분리) -->
   <div class="panel">
-    <div class="section-title"><span class="dot"></span><b>상승 TOP (통합 10종)</b> <small class="muted" style="margin-left:8px">1초 갱신</small></div>
-    <table id="mergedTop"><thead>
-      <tr><th>거래소</th><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr>
-    </thead><tbody></tbody></table>
+    <div class="section-title"><span class="dot"></span><b>상승 TOP10 (업비트 · 빗썸)</b> <small class="muted" style="margin-left:8px">1초 갱신</small></div>
+    <div class="row cols-2">
+      <div>
+        <b>업비트</b>
+        <table id="upbitTop"><thead>
+          <tr><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr>
+        </thead><tbody></tbody></table>
+      </div>
+      <div>
+        <b>빗썸</b>
+        <table id="bithumbTop"><thead>
+          <tr><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr>
+        </thead><tbody></tbody></table>
+      </div>
+    </div>
   </div>
 
   <!-- 거시경제 지표 (화면에서만 숨김) -->
@@ -144,7 +156,7 @@
 const APP = {
   INTERVAL_MS: 1000,
   TOP_N: 10,
-  UPBIT_API_BASE: (location.origin + "/api/upbit"), // 서버 프록시 권장
+  UPBIT_API_BASE: (location.origin + "/api/upbit"), // 서버 프록시(같이 쓰던 값)
   USE_PROXY: true,
   ENABLE_AI_CHIPS: true,
   SHOW_MACRO_PANEL: false
@@ -176,12 +188,12 @@ function krwTick(p){
   if (p >=       100) return 0.1;
   if (p >=        10) return 0.01;
   if (p >=         1) return 0.001;
-  return 0.0001; // 1원 미만
+  return 0.0001;
 }
 function roundToTick(v, ref){const s=krwTick(ref??v);return Math.round(v/s)*s;}
 function fmtPrice(v, ref){
   if (!isFinite(v)) return '-';
-  const s=krwTick(ref??v); const r=Math.max(roundToTick(v,ref), s); // 최소 한 틱 보장
+  const s=krwTick(ref??v); const r=Math.max(roundToTick(v,ref), s);
   const d = s>=1?0 : s>=0.1?1 : s>=0.01?2 : s>=0.001?3 : 4;
   return Number(r).toLocaleString('ko-KR',{minimumFractionDigits:d,maximumFractionDigits:d});
 }
@@ -243,7 +255,6 @@ searchInput.addEventListener('input',e=>{
 });
 searchInput.addEventListener('keydown',ev=>{if(ev.key==='Enter')$('btnSearch').click();});
 
-// 개선된 검색: 한글/영문/심볼/괄호형 모두 매칭
 $('btnSearch').addEventListener('click', ()=>{
   const fb='KRW-BTC';
   let qRaw=(searchInput.value||'').trim(); if(!qRaw){analyze(fb);return;}
@@ -298,7 +309,7 @@ function computeMacroScore(vals){
   if(vix!==null){ s += (vix<14?90:vix<20?70:45); w++; }
   if(y!==null){   s += (y<4?90:y<5?70:50); w++; }
   if(nq!==null){  s += (nq>0?85:nq>-1?65:45); w++; }
-  if(bd!==null){  s += (bd>50?60:80); w++; } // 알트 선호
+  if(bd!==null){  s += (bd>50?60:80); w++; }
   return w? (s/w) : null;
 }
 function computeOnchainScore(oc){
@@ -326,7 +337,7 @@ $('saveAlt').onclick = ()=>{
   const vals = {};
   altIds.forEach(id => vals[id] = ($(id).value||'').trim());
   save('alt', vals);
-  flashAlphaChip(calcAlphaPreview());
+  flashAlphaChip(calcAlphaPreview()));
 };
 (function initAlt(){
   const vals = load('alt', {});
@@ -347,7 +358,7 @@ function calcAlphaPreview(){
   const h = computeHumanScore(altVals);
   const used = [m,o,h].filter(v=>v!==null);
   const score = used.length ? (used.reduce((a,b)=>a+b,0)/used.length) : 50;
-  const alpha = clamp(((score-50)/50)*0.02, -0.03, 0.03); // -3% ~ +3% 범위
+  const alpha = clamp(((score-50)/50)*0.02, -0.03, 0.03);
   return {score, alpha, alphaSign: (alpha>0?`+${(alpha*100).toFixed(1)}%`:(alpha<0?`${(alpha*100).toFixed(1)}%`:'±0%'))};
 }
 
@@ -355,15 +366,12 @@ function calcAlphaPreview(){
 function fullsetTargets(candles, candles5m){
   const c=candles.map(x=>x.c), h=candles.map(x=>x.h), l=candles.map(x=>x.l), v=candles.map(x=>x.v);
   const price=c.at(-1);
-
-  // 기술분석
   const ema20=EMA(c,20).at(-1), ema50=EMA(c,50).at(-1);
   const rsiArr=RSI(c,14), rsi=rsiArr.at(-1)||50;
   const mac=MACD(c), macDiff=(mac.macd.at(-1)||0)-(mac.signal.at(-1)||0);
   const atr=ATR(h,l,c,14).at(-1)||0, atrPct=atr/price*100;
   const {hh,ll}=hhll(c,60), fib=fibLevels(hh,ll);
 
-  // 5m 추세
   let bias=0;
   if(candles5m && candles5m.length>30){
     const c5=candles5m.map(x=>x.c);
@@ -371,7 +379,6 @@ function fullsetTargets(candles, candles5m){
     bias = e20>e50 ? +1 : e20<e50 ? -1 : 0;
   }
 
-  // 기본 타점
   let buy1,buy2,sell1,sell2,stop; const up=ema20>ema50;
   if(up){ buy1=Math.min(ema20,fib.f382); buy2=Math.min(fib.f5,fib.f618);
          sell1=Math.max(hh,fib.ext127);  sell2=Math.max(sell1*1.02,fib.ext1618);
@@ -380,23 +387,18 @@ function fullsetTargets(candles, candles5m){
          sell1=Math.max(ema50,fib.f382); sell2=Math.max(hh,sell1*1.03);
          stop=Math.min(buy1-atr*1.0,ll-atr*0.3); }
 
-  // 5m 보정
-  const biasAdj=bias*0.003; // ±0.3%
+  const biasAdj=bias*0.003;
   buy1*=(1+biasAdj*0.8); buy2*=(1+biasAdj);
   sell1*=(1+biasAdj*1.2); sell2*=(1+biasAdj*1.4);
-
   if(rsi<38){ buy1*=0.997; buy2*=0.994; }
   if(rsi>65){ sell1*=1.004; sell2*=1.006; }
 
-  // 거시/온체인/심리 알파(±3%) 적용
-  const macroVals = load('macro', {});
-  const altVals   = load('alt',   {});
-  const m = computeMacroScore(macroVals);
-  const o = computeOnchainScore(altVals);
-  const hScore = computeHumanScore(altVals);
+  const m = computeMacroScore(load('macro', {}));
+  const o = computeOnchainScore(load('alt', {}));
+  const hScore = computeHumanScore(load('alt', {}));
   const used = [m,o,hScore].filter(v=>v!==null);
   const ctxScore = used.length ? (m??50)*0.2 + (o??50)*0.2 + (hScore??50)*0.1 + 50*0.5 : 50;
-  const alpha = clamp(((ctxScore-50)/50)*0.02, -0.03, 0.03); // -3% ~ +3%
+  const alpha = clamp(((ctxScore-50)/50)*0.02, -0.03, 0.03);
 
   buy1 *= (1 + alpha*0.8);
   buy2 *= (1 + alpha*0.9);
@@ -405,23 +407,12 @@ function fullsetTargets(candles, candles5m){
   stop  *= (1 - Math.max(0,alpha)*0.4);
 
   const step=krwTick(price), fix=v=>!isFinite(v)?step:Math.max(v,step);
-
-  // 상단 칩 즉시 업데이트
   flashAlphaChip(calcAlphaPreview());
-
-  return {
-    price:fix(price),
-    buy1:fix(buy1), buy2:fix(buy2),
-    sell1:fix(sell1), sell2:fix(sell2),
-    stop:fix(stop),
-    phase:marketPhase(rsi,macDiff,ema20,ema50),
-    spike:spikeTag(v),
-    risk:riskFromAtr(atrPct),
-    atrPct, rsiArr
-  };
+  return {price:fix(price),buy1:fix(buy1),buy2:fix(buy2),sell1:fix(sell1),sell2:fix(sell2),stop:fix(stop),
+          phase:marketPhase(rsi,macDiff,ema20,ema50),spike:spikeTag(v),risk:riskFromAtr(atrPct),atrPct,rsiArr};
 }
 
-/* ========= 멀티TF 정확도(앙상블) ========= */
+/* ========= 멀티TF 정확도 ========= */
 function ensembleAccuracy(basis, c1,c3,c5){
   const a1=roughAccuracy(c1, basis.rsiArr, basis.atrPct);
   const a3=roughAccuracy(c3, RSI(c3,14), basis.atrPct);
@@ -443,10 +434,8 @@ async function analyze(market){
   try{
     const [c1,c3,c5]=await Promise.all([fetchCandles(1,market,240), fetchCandles(3,market,240), fetchCandles(5,market,240)]);
     if(!c1.length) throw 0;
-
     const res=fullsetTargets(c1,c5);
     const acc=ensembleAccuracy(res, c1.map(x=>x.c), c3.map(x=>x.c), c5.map(x=>x.c));
-
     raf(()=>{
       paintAiChips({phase:res.phase, spike:res.spike, risk:res.risk, acc, base:res.price});
       const frag=document.createDocumentFragment();
@@ -455,7 +444,6 @@ async function analyze(market){
       frag.appendChild(mk(`매도1: ₩${fmtPrice(res.sell1, res.price)} · 매도2: ₩${fmtPrice(res.sell2, res.price)}`,'warn'));
       frag.appendChild(mk(`손절: ₩${fmtPrice(res.stop,  res.price)}`,'danger'));
       sigchips.replaceChildren(frag);
-
       const tb=document.querySelector('#signalTable tbody');
       tb.innerHTML=`<tr>
         <td>1분봉</td>
@@ -475,11 +463,12 @@ async function analyze(market){
   }
 }
 
-/* ========= 통합 TOP ========= */
+/* ========= 상승 TOP — 업비트/빗썸 분리 ========= */
 const bithumbKor = {
   BTC:'비트코인', ETH:'이더리움', XRP:'리플', ADA:'에이다', SOL:'솔라나', DOGE:'도지코인', SHIB:'시바이누',
   BCH:'비트코인캐시', ETC:'이더리움클래식', TRX:'트론', DOT:'폴카닷', MATIC:'폴리곤', LTC:'라이트코인',
-  APT:'앱토스', ARB:'아비트럼', SUI:'수이', PEPE:'페페', ASTR:'아스타'
+  APT:'앱토스', ARB:'아비트럼', SUI:'수이', PEPE:'페페', ASTR:'아스타', CAKE:'케이크', OPEN:'오픈캠퍼스',
+  STRK:'스트라크', XPL:'엑스피엘', NFT:'NFT', API3:'API3', PLUME:'플룸', REZ:'레즈', EPT:'이피티', SOON:'순'
 }; // 없으면 심볼 그대로 사용
 
 async function fetchUpbitTop(){
@@ -488,8 +477,8 @@ async function fetchUpbitTop(){
     if(!r.ok) throw 0; const j=await r.json();
     return (j.data||[]).slice(0,APP.TOP_N).map(x=>{
       const sym=(x.market||'KRW-?').replace('KRW-','');
-      const nameKor = upbitBySymbol.get(sym) || sym;
-      return { ex:'업비트', name:nameKor, sym, chg:(x.signed_change_rate||0)*100, vol:(x.acc_trade_price_24h||0) };
+      const nameKor = upbitBySymbol.get(sym) || sym; // 업비트는 공식 한글명
+      return { name:nameKor, sym, chg:(x.signed_change_rate||0)*100, vol:(x.acc_trade_price_24h||0) };
     });
   }catch{ return []; }
 }
@@ -497,29 +486,30 @@ async function fetchBithumbTop(){
   try{
     const r=await fetch('https://api.bithumb.com/public/ticker/ALL_KRW',{cache:'no-store'});
     const j=await r.json(); if(j.status!=='0000') throw 0;
-    return Object.entries(j.data).filter(([k,v])=>k!=='date'&&v&&v.fluctate_rate_24H)
+    return Object.entries(j.data)
+      .filter(([k,v])=>k!=='date'&&v&&v.fluctate_rate_24H)
       .map(([k,v])=>{
         const sym=k.toUpperCase();
-        return { ex:'빗썸', name:(bithumbKor[sym]||sym), sym, chg:parseFloat(v.fluctate_rate_24H), vol:parseFloat(v.acc_trade_value_24H||0) };
+        return { name:(bithumbKor[sym]||sym), sym, chg:parseFloat(v.fluctate_rate_24H), vol:parseFloat(v.acc_trade_value_24H||0) };
       })
       .sort((a,b)=>b.chg-a.chg).slice(0,APP.TOP_N);
   }catch{ return []; }
 }
-function renderMerged(rows){
-  const tb=document.querySelector('#mergedTop tbody'); const frag=document.createDocumentFragment();
+function renderTable(id, rows){
+  const tb=document.querySelector('#'+id+' tbody');
+  const frag=document.createDocumentFragment();
   rows.forEach(v=>{
     const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${v.ex}</td><td>${v.name}</td><td>${v.sym}</td>
+    tr.innerHTML=`<td>${v.name}</td><td>${v.sym}</td>
       <td class="${v.chg>=0?'up':'down'}">${pfmt(v.chg)}</td>
       <td class="right mono">${fmt(Math.round((v.vol||0)/1e8))} 억</td>`;
     frag.appendChild(tr);
   });
   tb.replaceChildren(frag);
 }
-async function refreshMerged(){
-  const u=await fetchUpbitTop(); const b=await fetchBithumbTop();
-  const merged=[...u,...b].sort((a,b)=>b.chg-a.chg).slice(0,APP.TOP_N);
-  raf(()=>{ renderMerged(merged); setUpdated(); });
+async function refreshTopBoth(){
+  const [u,b]=await Promise.all([fetchUpbitTop(), fetchBithumbTop()]);
+  raf(()=>{ renderTable('upbitTop',u); renderTable('bithumbTop',b); setUpdated(); });
 }
 
 /* ========= 매크로(저장만 유지) ========= */
@@ -538,20 +528,19 @@ function scoreMacro(vals,blink){
   if(blink){ rc.style.boxShadow='0 0 0 2px #38bdf8 inset'; setTimeout(()=>rc.style.boxShadow='none',700); }
 }
 
-/* ========= 표시/숨김 + 초기화 ========= */
+/* ========= 초기화 ========= */
 if(!APP.SHOW_MACRO_PANEL){const m=$('macroPanel'); if(m)m.classList.add('hidden');}
 document.addEventListener('keydown',e=>{ if(e.key.toLowerCase()==='m'&&e.shiftKey){const m=$('macroPanel'); if(m)m.classList.toggle('hidden');}});
-btnRefresh.addEventListener('click', ()=>refreshMerged());
+btnRefresh.addEventListener('click', ()=>refreshTopBoth());
 btnAuto.addEventListener('click',()=>{ if(timer){clearInterval(timer);timer=null;btnAuto.textContent='▶ 자동갱신 켜기(1초)';}
-  else{timer=setInterval(()=>refreshMerged(),APP.INTERVAL_MS);btnAuto.textContent='⏸ 자동갱신 끄기';refreshMerged();}});
+  else{timer=setInterval(()=>refreshTopBoth(),APP.INTERVAL_MS);btnAuto.textContent='⏸ 자동갱신 끄기';refreshTopBoth();}});
 
 (async function(){
   setStatus(true,'준비');
-  await loadMarkets();          // ★ 한글명 매핑 준비
-  refreshMerged();
-  setInterval(()=>refreshMerged(), APP.INTERVAL_MS);
-  const q=($('searchInput').value||'').trim();
-  if(q){$('btnSearch').click();} else { analyze('KRW-BTC'); }
+  await loadMarkets();          // 업비트 한글명 매핑
+  refreshTopBoth();
+  setInterval(()=>refreshTopBoth(), APP.INTERVAL_MS);
+  analyze('KRW-BTC');           // 최초 분석
 })();
 </script>
 </body>
