--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="description" content="업비트·빗썸 1초 갱신 + 실시간 급등 + 멀티타임프레임 타점 (거래 없음)"/>
 <style>
-:root{--bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;--up:#10b981;--down:#ef4444;--line:#1e293b;--chip:#1f2937;--shadow:rgba(0,0,0,.35)}
-*{box-sizing:border-box}
-html{background:#0b1220;color:#e5e7eb}
+:root{--bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;--line:#1e293b;--shadow:rgba(0,0,0,.35)}
+*{box-sizing:border-box} html{background:#0b1220;color:#e5e7eb}
 body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,Malgun Gothic,sans-serif}
 .wrap{max-width:1200px;margin:24px auto;padding:16px}
-h1{font-size:22px;margin:0 0 8px}
-.sub{color:#93c5fd;font-size:13px;opacity:.85;margin-top:4px}
+h1{font-size:22px;margin:0 0 8px}.sub{color:#93c5fd;font-size:13px;opacity:.85;margin-top:4px}
 .panel{background:#0f172a;border:1px solid #1e293b;border-radius:14px;padding:14px;margin:12px 0;box-shadow:0 6px 18px var(--shadow)}
 .section-title{display:flex;align-items:center;gap:8px;margin-bottom:6px}
 .section-title .dot{width:8px;height:8px;border-radius:50%;background:#38bdf8;display:inline-block}
@@ -30,19 +28,15 @@ h1{font-size:22px;margin:0 0 8px}
 .chip.danger{color:#fecaca;border-color:#7f1d1d;background:#2f1313}
 table{width:100%;border-collapse:collapse;table-layout:fixed}
 th,td{padding:10px;border-bottom:1px dashed #1e293b;font-size:14px;white-space:nowrap}
-th{color:#93c5fd;text-align:left}
-tr:hover{background:#0d1b31}
-.up{color:#10b981}.down{color:#ef4444}
-.mono{font-variant-numeric:tabular-nums}
-.right{text-align:right}
-.muted{color:#94a3b8}
-.hidden{display:none!important}
+th{color:#93c5fd;text-align:left} tr:hover{background:#0d1b31}
+.up{color:#10b981}.down{color:#ef4444}.mono{font-variant-numeric:tabular-nums}
+.right{text-align:right}.muted{color:#94a3b8}
 </style>
 </head>
 <body>
 <div class="wrap">
   <h1>사토시의지갑</h1>
-  <div class="sub">⚡ 업비트·빗썸 1초 갱신 · 실시간 급등 코인 · 멀티타임프레임 타점</div>
+  <div class="sub">⚡ 업비트·빗썸 1초 갱신 · 실시간 급등 · 멀티타임프레임 타점</div>
 
   <!-- 상태 -->
   <div class="panel">
@@ -55,7 +49,7 @@ tr:hover{background:#0d1b31}
     </div>
   </div>
 
-  <!-- 검색 -->
+  <!-- 검색 / 타점 -->
   <div class="panel">
     <div class="section-title"><span class="dot"></span><b>검색 (한글/영문/심볼) — 자동완성 5개</b></div>
     <div class="searchbar">
@@ -66,7 +60,6 @@ tr:hover{background:#0d1b31}
     <div id="aiChips" class="hint" style="margin-top:10px"></div>
     <div id="signalChips" class="hint" style="margin-top:10px"></div>
 
-    <!-- 타점 표 -->
     <div style="margin-top:12px">
       <table id="signalTable"><thead>
         <tr>
@@ -110,35 +103,25 @@ tr:hover{background:#0d1b31}
 </div>
 
 <script>
-/* ===== 설정 ===== */
-const APP = {
-  INTERVAL_MS: 1000,
-  TOP_N: 10,
-  UPBIT_API_BASE: (location.origin + "/api/upbit"),
-  USE_PROXY: true
-};
-const upbit = (fn, q="") => APP.USE_PROXY
-  ? `${APP.UPBIT_API_BASE}?fn=${fn}${q}`
-  : (fn==="markets" ? "https://api.upbit.com/v1/market/all?isDetails=false"
-                    : `https://api.upbit.com/v1/${fn}` + (q||""));
-
-/* ===== 유틸 ===== */
-const $ = id => document.getElementById(id);
-const fmt = n => (n===null||n===undefined||isNaN(n))?'-':Number(n).toLocaleString('ko-KR');
-const pfmt = n => { const x=Number(n); if(!isFinite(x)) return '-'; return (x>0?'+':'')+x.toFixed(2)+'%'; };
-const setUpdated = () => $('sts-updated').textContent = '업데이트: ' + new Date().toLocaleString('ko-KR');
-function krwTick(p){ if(p>=2_000_000)return 1000; if(p>=1_000_000)return 500; if(p>=500_000)return 100; if(p>=100_000)return 50; if(p>=10_000)return 10; if(p>=1_000)return 1; if(p>=100)return .1; if(p>=10)return .01; if(p>=1)return .001; return .0001; }
+/* ===== 설정 & 유틸 ===== */
+const APP={INTERVAL_MS:1000,TOP_N:10,UPBIT_API_BASE:(location.origin+"/api/upbit"),USE_PROXY:true};
+const upbit=(fn,q="")=>APP.USE_PROXY?`${APP.UPBIT_API_BASE}?fn=${fn}${q}`:(fn==="markets"?"https://api.upbit.com/v1/market/all?isDetails=false":`https://api.upbit.com/v1/${fn}`+(q||""));
+const $=id=>document.getElementById(id);
+const fmt=n=>(n===null||n===undefined||isNaN(n))?'-':Number(n).toLocaleString('ko-KR');
+const pfmt=n=>{const x=Number(n);if(!isFinite(x))return'-';return(x>0?'+':'')+x.toFixed(2)+'%';};
+const setUpdated=()=>$('sts-updated').textContent='업데이트: '+new Date().toLocaleString('ko-KR');
+function krwTick(p){if(p>=2e6)return 1000;if(p>=1e6)return 500;if(p>=5e5)return 100;if(p>=1e5)return 50;if(p>=1e4)return 10;if(p>=1e3)return 1;if(p>=100)return .1;if(p>=10)return .01;if(p>=1)return .001;return .0001;}
 function roundToTick(v,ref){const s=krwTick(ref??v);return Math.round(v/s)*s;}
-function fmtPrice(v,ref){ if(!isFinite(v)) return '-'; const s=krwTick(ref??v); const r=Math.max(roundToTick(v,ref),s); const d=s>=1?0:s>=.1?1:s>=.01?2:s>=.001?3:4; return Number(r).toLocaleString('ko-KR',{minimumFractionDigits:d,maximumFractionDigits:d}); }
+function fmtPrice(v,ref){if(!isFinite(v))return'-';const s=krwTick(ref??v);const r=Math.max(roundToTick(v,ref),s);const d=s>=1?0:s>=.1?1:s>=.01?2:s>=.001?3:4;return Number(r).toLocaleString('ko-KR',{minimumFractionDigits:d,maximumFractionDigits:d});}
 
 /* ===== 마켓/검색 ===== */
 let upbitMarkets=[], upbitBySymbol=new Map();
 async function loadMarkets(){
   try{
-    const r = await fetch(upbit('markets'),{cache:'no-store'});
-    const j = await r.json(); const list = Array.isArray(j)?j:(j.markets||j||[]);
-    upbitMarkets = list.filter(m => (m.market||'').startsWith('KRW-'));
-    upbitMarkets.forEach(m => { const sym=(m.market||'').split('-')[1]; if(sym) upbitBySymbol.set(sym, m.korean_name); });
+    const r=await fetch(upbit('markets')); const j=await r.json();
+    const list=Array.isArray(j)?j:(j.markets||j||[]);
+    upbitMarkets=list.filter(m=>(m.market||'').startsWith('KRW-'));
+    upbitMarkets.forEach(m=>{const sym=(m.market||'').split('-')[1]; if(sym) upbitBySymbol.set(sym, m.korean_name);});
     $('sts-api').textContent='API: 정상';
   }catch{ $('sts-api').textContent='API: 연결 오류'; $('sts-api').className='badge err'; }
 }
@@ -156,49 +139,47 @@ $('searchInput').addEventListener('input',e=>{
   const items=upbitMarkets.filter(m=>m.korean_name.toLowerCase().includes(q)||(m.english_name||'').toLowerCase().includes(q)||(m.market||'').toLowerCase().includes(q));
   setChips(items);
 });
-$('searchInput').addEventListener('keydown',ev=>{ if(ev.key==='Enter')$('btnSearch').click(); });
-$('btnSearch').addEventListener('click', ()=>{
-  const fb='KRW-BTC';
-  let qRaw=($('searchInput').value||'').trim(); if(!qRaw){analyze(fb);return;}
+$('searchInput').addEventListener('keydown',ev=>{if(ev.key==='Enter')$('btnSearch').click();});
+$('btnSearch').addEventListener('click',()=>{
+  const fb='KRW-BTC'; let qRaw=($('searchInput').value||'').trim(); if(!qRaw){analyze(fb);return;}
   const q=qRaw.replace(/\s+/g,' ').toLowerCase(); const up=qRaw.replace(/\s+/g,'').toUpperCase();
-  const pick =
-      upbitMarkets.find(m=>(m.market||'').toUpperCase()===up)
-   || upbitMarkets.find(m=>(m.market||'').toUpperCase().endsWith('-'+up))
-   || upbitMarkets.find(m=>(m.korean_name||'').toLowerCase()===q)
-   || upbitMarkets.find(m=>(m.english_name||'').toLowerCase()===q)
-   || upbitMarkets.find(m=>(m.korean_name||'').toLowerCase().includes(q))
-   || upbitMarkets.find(m=>(m.english_name||'').toLowerCase().includes(q))
-   || upbitMarkets.find(m=>(m.market||'').toLowerCase().includes(q));
+  const pick= upbitMarkets.find(m=>(m.market||'').toUpperCase()===up)
+        || upbitMarkets.find(m=>(m.market||'').toUpperCase().endsWith('-'+up))
+        || upbitMarkets.find(m=>(m.korean_name||'').toLowerCase()===q)
+        || upbitMarkets.find(m=>(m.english_name||'').toLowerCase()===q)
+        || upbitMarkets.find(m=>(m.korean_name||'').toLowerCase().includes(q))
+        || upbitMarkets.find(m=>(m.english_name||'').toLowerCase().includes(q))
+        || upbitMarkets.find(m=>(m.market||'').toLowerCase().includes(q));
   if(!pick){ alert('업비트 KRW 마켓에서 찾지 못했습니다. (예: SHIB, BTC)'); analyze(fb); return; }
   analyze(pick.market); setChips([pick]);
 });
 
-/* ===== 지표/타점 (간단 유지판) ===== */
+/* ===== 타점(간단 유지판) ===== */
 function EMA(a,p){const k=2/(p+1);let o=[],pr=null;for(let i=0;i<a.length;i++){const v=a[i];pr=(pr===null)?v:(v-pr)*k+pr;o.push(pr)}return o}
 function RSI(c,p=14){if(c.length<=p)return[];let g=[],l=[];for(let i=1;i<c.length;i++){const d=c[i]-c[i-1];g.push(Math.max(d,0));l.push(Math.max(-d,0))}let ag=g.slice(0,p).reduce((a,b)=>a+b,0)/p,al=l.slice(0,p).reduce((a,b)=>a+b,0)/p,o=[100-(100/(1+(ag/(al||1e-9))))];for(let i=p;i<g.length;i++){ag=(ag*(p-1)+g[i])/p;al=(al*(p-1)+l[i])/p;o.push(100-(100/(1+(ag/(al||1e-9)))))}return o}
 function hhll(a,n){const x=a.slice(-n);return{hh:Math.max(...x),ll:Math.min(...x)}}
-function fullsetTargets(c){ const price=c.at(-1); const ema20=EMA(c,20).at(-1), ema50=EMA(c,50).at(-1); const r=RSI(c,14); const rsi=r.at(-1)||50; const {hh,ll}=hhll(c,60);
+function fullsetTargets(c){ const price=c.at(-1); const ema20=EMA(c,20).at(-1), ema50=EMA(c,50).at(-1); const rsi=(RSI(c,14).at(-1)||50); const {hh,ll}=hhll(c,60);
+  const d=hh-ll; const f382=hh-d*0.382, f5=hh-d*0.5, f618=hh-d*0.618, ext127=hh+d*0.272, ext1618=hh+d*0.618;
   let buy1,buy2,sell1,sell2,stop; const up=ema20>ema50;
-  const d=hh-ll, f382=hh-d*0.382, f5=hh-d*0.5, f618=hh-d*0.618, ext127=hh+d*0.272, ext1618=hh+d*0.618;
   if(up){ buy1=Math.min(ema20,f382); buy2=Math.min(f5,f618); sell1=Math.max(hh,ext127); sell2=Math.max(sell1*1.02,ext1618); stop=Math.min(buy1-(price*0.01), f618-(price*0.005)); }
   else { buy1=Math.min(f5,f618); buy2=f618*0.985; sell1=Math.max(ema50,f382); sell2=Math.max(hh,sell1*1.03); stop=Math.min(buy1-(price*0.009), ll-(price*0.003)); }
-  return {price,buy1,buy2,sell1,sell2,stop, rsi, phase:(rsi>70&&ema20>ema50)?'불장':(rsi<45&&ema20<ema50)?'하락장':'중립', risk:2};
+  return {price,buy1,buy2,sell1,sell2,stop, phase:(rsi>70&&ema20>ema50)?'불장':(rsi<45&&ema20<ema50)?'하락장':'중립', risk:2};
 }
-async function fetchCandles(minutes, market, count=200){
+async function fetchCandles(minutes,market,count=200){
   const r=await fetch(`${APP.UPBIT_API_BASE}?fn=candles&minutes=${minutes}&market=${encodeURIComponent(market)}&count=${count}`,{cache:'no-store'});
   const jr=await r.json(); const rows=Array.isArray(jr)?jr:(jr.data||[]);
   return rows.map(x=>x.trade_price).reverse();
 }
 async function analyze(market){
   try{
-    const c1 = await fetchCandles(1, market, 240); if(!c1.length) throw 0;
-    const res = fullsetTargets(c1);
-    const aiFrag=document.createDocumentFragment();
+    const c1=await fetchCandles(1,market,240); if(!c1.length) throw 0;
+    const res=fullsetTargets(c1);
     const mk=(t,cls)=>{const s=document.createElement('span'); s.className='chip '+(cls||''); s.textContent=t; return s;};
-    aiFrag.appendChild(mk(`시장: ${res.phase}`, res.phase==='불장'?'ok':res.phase==='하락장'?'danger':'warn'));
-    aiFrag.appendChild(mk(`위험도 ${res.risk===1?'낮음':res.risk===2?'보통':'높음'}`,'warn'));
-    aiFrag.appendChild(mk(`현재가 ₩${fmtPrice(res.price,res.price)}`,''));
-    $('aiChips').replaceChildren(aiFrag);
+    const ai=document.createDocumentFragment();
+    ai.appendChild(mk(`시장: ${res.phase}`, res.phase==='불장'?'ok':res.phase==='하락장'?'danger':'warn'));
+    ai.appendChild(mk(`위험도 보통`,'warn'));
+    ai.appendChild(mk(`현재가 ₩${fmtPrice(res.price,res.price)}`,''));
+    $('aiChips').replaceChildren(ai);
 
     const s=document.createDocumentFragment();
     s.appendChild(mk(`매수1: ₩${fmtPrice(res.buy1,res.price)}`,'ok'));
@@ -210,7 +191,7 @@ async function analyze(market){
 
     $('signalTable').querySelector('tbody').innerHTML=`
       <tr>
-        <td>1분봉</td><td>${res.phase}</td><td>${res.risk===1?'낮음':res.risk===2?'보통':'높음'}</td><td>—</td>
+        <td>1분봉</td><td>${res.phase}</td><td>보통</td><td>—</td>
         <td class="right mono">${fmtPrice(res.buy1,res.price)}</td>
         <td class="right mono">${fmtPrice(res.buy2,res.price)}</td>
         <td class="right mono">${fmtPrice(res.sell1,res.price)}</td>
@@ -218,21 +199,11 @@ async function analyze(market){
         <td class="right mono">${fmtPrice(res.stop,res.price)}</td>
       </tr>`;
     setUpdated();
-  }catch{
-    $('signalChips').replaceChildren(); const e=document.createElement('span'); e.className='chip danger'; e.textContent='분석 실패'; $('signalChips').appendChild(e);
-  }
+  }catch{ $('signalChips').replaceChildren(); const e=document.createElement('span'); e.className='chip danger'; e.textContent='분석 실패'; $('signalChips').appendChild(e); }
 }
 
-/* ===== 한글표기 (빗썸) ===== */
-const bithumbKor = {
-  BTC:'비트코인', ETH:'이더리움', XRP:'리플', ADA:'에이다', SOL:'솔라나', DOGE:'도지코인', SHIB:'시바이누',
-  BCH:'비트코인캐시', ETC:'이더리움클래식', TRX:'트론', DOT:'폴카닷', MATIC:'폴리곤', LTC:'라이트코인',
-  APT:'앱토스', ARB:'아비트럼', SUI:'수이', PEPE:'페페', ASTR:'아스타', STX:'스택스',
-  API3:'에이피아이쓰리', XLM:'스텔라루멘', XEC:'이캐시', XDC:'엑스디씨', XTZ:'테조스',
-  REZ:'레즈', AVL:'아벨라', PLUME:'플룸', OPEN:'오픈캔', STRK:'스트라이크', EPT:'에피티',
-  SOON:'순코인', XPL:'엑스플로어', LINK:'체인링크', INJ:'인젝티브', BLUR:'블러', CVC:'시빅', CHZ:'칠리즈',
-  ENA:'에테나', ONDO:'온도', MNT:'멘타', NEAR:'니어프로토콜', AVAX:'아발란체'
-};
+/* ===== 빗썸 한글표기 ===== */
+const bithumbKor={BTC:'비트코인',ETH:'이더리움',XRP:'리플',ADA:'에이다',SOL:'솔라나',DOGE:'도지코인',SHIB:'시바이누',BCH:'비트코인캐시',ETC:'이더리움클래식',TRX:'트론',DOT:'폴카닷',MATIC:'폴리곤',LTC:'라이트코인',APT:'앱토스',ARB:'아비트럼',SUI:'수이',PEPE:'페페',ASTR:'아스타',STX:'스택스',API3:'에이피아이쓰리',XLM:'스텔라루멘',XEC:'이캐시',XDC:'엑스디씨',XTZ:'테조스',REZ:'레즈',AVL:'아벨라',PLUME:'플룸',OPEN:'오픈캔',STRK:'스트라이크',EPT:'에피티',SOON:'순코인',XPL:'엑스플로어',LINK:'체인링크',INJ:'인젝티브',BLUR:'블러',CVC:'시빅',CHZ:'칠리즈',ENA:'에테나',ONDO:'온도',MNT:'멘타',NEAR:'니어프로토콜',AVAX:'아발란체'};
 
 /* ===== 업비트/빗썸 TOP ===== */
 async function fetchUpbitTop(){
@@ -251,11 +222,9 @@ async function fetchBithumbTop(){
     const r=await fetch('https://api.bithumb.com/public/ticker/ALL_KRW',{cache:'no-store'});
     const j=await r.json(); if(j.status!=='0000') throw 0;
     return Object.entries(j.data).filter(([k,v])=>k!=='date'&&v&&v.fluctate_rate_24H)
-      .map(([k,v])=>{
-        const sym=k.toUpperCase();
-        return { ex:'빗썸', name:(bithumbKor[sym]||sym), sym,
-                 chg:parseFloat(v.fluctate_rate_24H), vol:parseFloat(v.acc_trade_value_24H||0), price:parseFloat(v.closing_price||0) };
-      }).sort((a,b)=>b.chg-a.chg).slice(0,APP.TOP_N);
+      .map(([k,v])=>({ ex:'빗썸', sym:k.toUpperCase(), name:(bithumbKor[k.toUpperCase()]||k.toUpperCase()),
+                        chg:parseFloat(v.fluctate_rate_24H), vol:parseFloat(v.acc_trade_value_24H||0), price:parseFloat(v.closing_price||0) }))
+      .sort((a,b)=>b.chg-a.chg).slice(0,APP.TOP_N);
   }catch{ return []; }
 }
 function renderTop(tableId, rows){
@@ -272,40 +241,31 @@ function renderTop(tableId, rows){
 async function refreshUpbitTop(){ renderTop('upbitTop', await fetchUpbitTop()); }
 async function refreshBithumbTop(){ renderTop('bithumbTop', await fetchBithumbTop()); }
 
-/* ===== 실시간 급등(Δ15초) ===== */
-const priceCache = { upbit:new Map(), bithumb:new Map() }; // sym -> [{t,price}]
-function pushCache(map, sym, price){
-  const now=Date.now(); const arr=map.get(sym)||[];
-  arr.push({t:now, p:price}); while(arr.length && now-arr[0].t>20_000) arr.shift(); // 20초 보관
-  map.set(sym, arr);
-}
-function jumpPct(arr){ // 15초 전 대비
-  const now=Date.now(); const base=arr.find(x=>now-x.t>=15_000) || arr[0];
-  if(!base) return 0; const last=arr[arr.length-1]; if(!last || !base.p) return 0;
-  return (last.p/base.p-1)*100;
-}
+/* ===== 실시간 급등 (Δ15초) ===== */
+const priceCache={upbit:new Map(), bithumb:new Map()}; // sym -> [{t,p}]
+function pushCache(map,sym,price){const now=Date.now();const arr=map.get(sym)||[];arr.push({t:now,p:price});while(arr.length&&now-arr[0].t>20_000)arr.shift();map.set(sym,arr);}
+function jumpPct(arr){const now=Date.now();const base=arr.find(x=>now-x.t>=15_000)||arr[0];if(!base)return 0;const last=arr[arr.length-1];if(!last||!base.p)return 0;return (last.p/base.p-1)*100;}
 async function refreshSpikes(){
-  // 업비트: 프록시 top 호출로 전종목 가격 가져오는 셈(상당수)
-  const up = await fetchUpbitTop().catch(()=>[]);
-  up.forEach(x=>pushCache(priceCache.upbit, x.sym, x.price));
-
-  // 빗썸: ALL_KRW에서 전종목 가격
-  let b = []; try{
+  // 업비트: top 결과를 가격 소스로 활용
+  const u=await fetchUpbitTop().catch(()=>[]);
+  u.forEach(x=>pushCache(priceCache.upbit, x.sym, x.price));
+  // 빗썸: ALL_KRW 가격 전체 스냅
+  try{
     const r=await fetch('https://api.bithumb.com/public/ticker/ALL_KRW',{cache:'no-store'});
     const j=await r.json(); if(j.status==='0000'){
-      b = Object.entries(j.data).filter(([k,v])=>k!=='date'&&v&&v.closing_price)
-          .map(([k,v])=>({sym:k.toUpperCase(), price:parseFloat(v.closing_price||0)}));
-      b.forEach(x=>pushCache(priceCache.bithumb, x.sym, x.price));
+      Object.entries(j.data).forEach(([k,v])=>{
+        if(k==='date') return; const sym=k.toUpperCase(); const price=parseFloat(v.closing_price||0);
+        if(price>0) pushCache(priceCache.bithumb, sym, price);
+      });
     }
   }catch{}
 
-  // 스캔
   const rows=[];
   for(const [sym,arr] of priceCache.upbit.entries()){
-    const pct=jumpPct(arr); if(pct>=3){ rows.push({ex:'업비트', sym, name:(upbitBySymbol.get(sym)||sym), pct, price:arr.at(-1).p}); }
+    const pct=jumpPct(arr); if(pct>=3) rows.push({ex:'업비트', sym, name:(upbitBySymbol.get(sym)||sym), pct, price:arr.at(-1).p});
   }
   for(const [sym,arr] of priceCache.bithumb.entries()){
-    const pct=jumpPct(arr); if(pct>=3){ rows.push({ex:'빗썸', sym, name:(bithumbKor[sym]||sym), pct, price:arr.at(-1).p}); }
+    const pct=jumpPct(arr); if(pct>=3) rows.push({ex:'빗썸', sym, name:(bithumbKor[sym]||sym), pct, price:arr.at(-1).p});
   }
   rows.sort((a,b)=>b.pct-a.pct);
   const tb=$('#spikeTop tbody'); const frag=document.createDocumentFragment();
@@ -313,7 +273,7 @@ async function refreshSpikes(){
     const tr=document.createElement('tr');
     tr.innerHTML=`<td>${v.ex}</td><td>${v.name}</td><td>${v.sym}</td>
       <td class="up">+${v.pct.toFixed(2)}%</td>
-      <td class="right mono">₩${fmtPrice(v.price, v.price)}</td>`;
+      <td class="right mono">₩${fmtPrice(v.price,v.price)}</td>`;
     frag.appendChild(tr);
   });
   tb.replaceChildren(frag);
@@ -322,17 +282,14 @@ async function refreshSpikes(){
 
 /* ===== 버튼/초기화 ===== */
 let timer=null;
-$('btn-refresh').addEventListener('click', ()=>{ refreshUpbitTop(); refreshBithumbTop(); refreshSpikes(); });
-$('btn-auto').addEventListener('click', ()=>{
-  if(timer){ clearInterval(timer); timer=null; $('btn-auto').textContent='▶ 자동갱신 켜기(1초)'; }
-  else { timer=setInterval(()=>{ refreshUpbitTop(); refreshBithumbTop(); refreshSpikes(); }, APP.INTERVAL_MS);
-         $('btn-auto').textContent='⏸ 자동갱신 끄기';
-         refreshUpbitTop(); refreshBithumbTop(); refreshSpikes(); }
+$('btn-refresh').addEventListener('click',()=>{refreshUpbitTop();refreshBithumbTop();refreshSpikes();});
+$('btn-auto').addEventListener('click',()=>{
+  if(timer){clearInterval(timer);timer=null;$('btn-auto').textContent='▶ 자동갱신 켜기(1초)';}
+  else{timer=setInterval(()=>{refreshUpbitTop();refreshBithumbTop();refreshSpikes();},APP.INTERVAL_MS);
+       $('btn-auto').textContent='⏸ 자동갱신 끄기'; refreshUpbitTop();refreshBithumbTop();refreshSpikes();}
 });
-
 (async function(){
   await loadMarkets();
-  // 첫 로딩
   refreshUpbitTop(); refreshBithumbTop(); refreshSpikes();
   analyze('KRW-BTC');
 })();
