--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ th{color:#93c5fd;text-align:left} tr:hover{background:#0d1b31}
 
   <!-- 실시간 급등 코인 -->
   <div class="panel">
-    <div class="section-title"><span class="dot"></span><b>실시간 급등 코인 (최근 15초, 상위 8)</b> <small class="muted" style="margin-left:8px">1초 갱신</small></div>
+    <div class="section-title"><span class="dot"></span><b>실시간 급등 코인</b> <small class="muted" style="margin-left:8px">1초 갱신</small></div>
     <table id="spikeTop"><thead>
       <tr><th>거래소</th><th>코인(한글)</th><th>심볼</th><th class="right">Δ15s</th><th class="right">현재가</th></tr>
     </thead><tbody></tbody></table>
